force-app/main/default/objects/Media_Asset__c/Media_Asset__c.object-meta.xml
<CustomObject>
    <label>Media Asset</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Media Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>