force-app/main/default/objects/Media_Asset__c/fields/Media_Asset_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Media_Asset_18_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Media Asset 18 ID</label>
    <type>Text</type>
</CustomField>