force-app/main/default/objects/Media_Asset__c/fields/Media_Asset__c.field-meta.xml
<CustomField>
    <fullName>Media_Asset__c</fullName>
    <label>Media Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>