force-app/main/default/objects/Media_Asset__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Assets</relationshipLabel>
    <relationshipName>Media_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>