force-app/main/default/objects/Media_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Publisher__c</columns>
    <columns>Media_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>